@@ -3,8 +3,7 @@
 
 struct S {
   static constexpr int size;	// { dg-error "must have an initializer" "must have" }
-  // { dg-error "previous declaration" "previous" { target *-*-* } 5 }
 };
 
 const int limit = 2 * S::size;
-constexpr int S::size = 256;	// { dg-error "" }
+constexpr int S::size = 256;
